--- a/views/partial/indexsidebar.ejs
+++ b/views/partial/indexsidebar.ejs
@@ -1,6 +1,6 @@
 <div class="site_intro">
 	<div class="sidetitle"><span class="titletext">38锶</span></div>
-	<p>做一名简单的锶者</p>
+	<p>做一体化的IT社区</p>
 </div>
 <% if(locals.userinfo){%>
 <div class="pubone">
