--- a/views/partial/nav.ejs
+++ b/views/partial/nav.ejs
@@ -48,12 +48,14 @@
 				</ul> 
 			<%}%> 
  		<div class="headsearch"> 
+ 				<div class="search-btn-wrap">
+	              <i class="fa btn-search fa-search"></i>
+	              <i class="fa btn-close fa-times-circle"></i>
+	            </div>
 				<form class="navbar-form form-search" action="/search" method="GET">
 	              <div class="form-group">
 	                <input class="form-control search-ipt" name="searchstr" type="text" value="" placeholder="search">
 	              </div>
-	              <i class="fa btn-search fa-search"></i>
-	              <i class="fa btn-close fa-times-circle"></i>
 	            </form>
 		</div>
 			<div style="fix:clear;"></div>
