修改样式和js

--- a/source/stylesheets/nav.css
+++ b/source/stylesheets/nav.css
@@ -121,8 +121,7 @@
 } 
 .headsearch { 
 	float: right; 
-	height: 50px;
-	margin-right: 15px;
+	height: 50px; 
 	font-size: 14px;
 	position: relative;
 	color: #fff; 
@@ -238,56 +237,90 @@
 	text-decoration: none;
 	color: #D1D1D1
 }
-
-.dropdown-menu a {
-	background: #fff;
+#optionaccesslist{
+	background-color: #0C8176;
+	padding: 0px;
+}
+#optionaccesslist li a {
+	background: #0C8176;
 	display: block;
 	padding: 3px 20px;
 	clear: both;
 	font-weight: 400;
 	line-height: 1.42857143;
-	color: #333;
+	color: #fff;
 	white-space: nowrap;
 }
+#optionaccesslist li a:hover{
+	background-color: #0B685F;
+} 
 .reg_login {
 	float: right;  
 } 
-.optionaccess{
+.un_reg_login{
+	float: right;
+}
+.reg_login .optionaccess{
+	height: 50px;
+	width: 100px;
+	display: block; 
+	float: right;	  
+	color: #fff !important;
+	font-size: 14px; 
+	padding: 15px 8px;
+	text-align: center;
+	color: #fff;   
+}
+.reg_login .open a.optionaccess{
+	background-color: #0C8176 !important;
+}
+.un_reg_login .optionaccess{
 	display: block;
 	color:#fff !important;
 	font-size: 14px; 
 	padding: 15px 8px;
 	height: 50px;
+	width: 60px;
+	text-align: center;
 	float: right;	
 	transition: all 0.3s;
 	-moz-transition: all 0.3s; /* Firefox 4 */
 	-webkit-transition: all 0.3s; /* Safari 和 Chrome */
 	-o-transition: all 0.3s; /* Opera */
 }
-.optionaccess:hover {
+a.optionaccess:hover {
 	text-decoration: none;
 	background-color: #0C8176 !important;
-	color: #D1D1D1;
+	color: #fff !important;
 }
- 
+.reg_login li {
+	list-style: none;
+}  
+.un_reg_login li {
+	list-style: none;
+}  
+.reg_login ul {
+	min-width: 100px;
+	width: 100px;
+	left: -15px;
+	background-color: #0C8176;
+	padding: 0px;
+	border-radius: 0;
+	margin: -1px 0 0;
+	border: 0px;
+	text-align: center;
+}
+.reg_login .divider{
+	height: 1px;
+	overflow: hidden;
+	background-color: #0B685F;
+}
 .headon .optionaccess{
 	font-size: 14px; 
 	height: 34px;
 	padding: 6px 8px;
-}
-.reg_login .dropdown-toggle {
-	display: block; 
-	float: right;
-	color: #fff !important;
-	background-color: #00a090 !important; 
-	padding-top: 17px;
-	padding-bottom: 15px;	
-	transition: all 0.3s;
-	-moz-transition: all 0.3s; /* Firefox 4 */
-	-webkit-transition: all 0.3s; /* Safari 和 Chrome */
-	-o-transition: all 0.3s; /* Opera */
-}
-.headon .reg_login .dropdown-toggle {
+} 
+.headon .reg_login .optionaccess {
 	display: block; 
 	float: right;
 	color: #fff !important;
@@ -296,13 +329,12 @@
 	padding-top: 8px;
 	padding-bottom: 0px;
 }
-.reg_login li {
-	list-style: none;
-} 
-.reg_login ul {
-	min-width: 50px;
-	left: -15px;
-	border-radius: 0;
-	margin: -1px 0 0;
-	text-align: center;
+.headon .un_reg_login .optionaccess {
+	display: block; 
+	float: right;
+	color: #fff !important;
+	background-color: #00a090 !important; 
+	line-height: 20px;
+	padding-top: 8px;
+	padding-bottom: 0px;
 }
