--- a/views/articledetail.ejs
+++ b/views/articledetail.ejs
@@ -141,7 +141,7 @@ var replies = d.replies;
 						</form>
 					</div>
 					<%}else{%>
-					<div class="nosignin"><a  data-toggle="modal" data-target="#loginmodal">登录</a>后才能回复， 没有账号？点击这里<a  data-toggle="modal" data-target="#regmodal">注册</a></div>
+					<div class="nosignin"><a id="nosiginin-login">登录</a>后才能回复， 没有账号？点击这里<a id="nosiginin-reg">注册</a></div>
 					<%}%>
 				</div>
 			</div>
