--- a/views/partial/footer.ejs
+++ b/views/partial/footer.ejs
@@ -70,7 +70,7 @@
 			</div>
 		</div>
 	</div>
-	<div id="gotopbtn" data-toggle="tooltip" data-placement="right" title="GO TOP">
+	<div id="gotopbtn" data-toggle="tooltip" data-placement="right" title="TOP">
 		<span class="fa fa-arrow-up"></span>
 	</div>
 	
