增加location和site链接

--- a/views/articledetail.ejs
+++ b/views/articledetail.ejs
@@ -144,7 +144,18 @@ var replies = d.replies;
 					<div class="nosignin"><a id="nosiginin-login">登录</a>后才能回复， 没有账号？点击这里<a id="nosiginin-reg">注册</a></div>
 					<%}%>
 				</div>
-			</div>
+			<script async src="//pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
+<!-- 首页 -->
+<ins class="adsbygoogle"
+     style="display:inline-block;width:728px;height:90px"
+     data-ad-client="ca-pub-4947257507951598"
+     data-ad-slot="3425147460"></ins>
+<script>
+(adsbygoogle = window.adsbygoogle || []).push({});
+</script>
+			</div> 
+
+			
 			<div style="clear:both"></both>
 			</div>
 			<% include partial/footer %>
