--- a/views/user.ejs
+++ b/views/user.ejs
@@ -73,7 +73,7 @@
 						<%}%>
 						<div class="msg_content"><%- nearArticle[i].newcontent %> </div>
 						<%}else{%>
-						<p class="item_title"><a href="/redirect?url=<%= nearArticle[i].title %>" target="_blank"><%= nearArticle[i].content %><i class="fa fa-external-link"></i></a></p>
+						<p class="item_title"><a href="/redirect?url=<%= nearArticle[i].title %>" target="_blank" class="urltype"><%= nearArticle[i].content %><i class="fa fa-external-link"></i></a></p>
 						<%}%>
 						<div class="clearfix"></div>
 					</div>
