--- a/source/stylesheets/index.css
+++ b/source/stylesheets/index.css
@@ -112,21 +112,7 @@
 	border: 0 solid #ccc!important;
 	margin: 6px 0px 6px 0px;
 	border-radius: 0;
-}
-.article_title{	
-	color: #07695F;
-	font-size: 18px;
-	text-decoration: none;
-}
-.article_msg_content{	
-	color: #333;
-	line-height: 1.8em;
-	overflow: hidden;
-	font: 14px/1.7 "微软雅黑",Verdana,Geneva,sans-serif;
-	border: 0 solid #ccc!important;
-	margin: 6px 0;
-	border-radius: 0;
-}
+} 
 .shuo_sty {
 	font-size: 14px;
 	color: #777;
@@ -512,7 +498,7 @@
 .pagination li a, .pagination li span {
 	background-color: #fafafa;
 	color: #999; 
-	border: 2px solid #fafafa; 
+	border-width: 0px; 
 	border-color:#fafafa !important;
 	height: 34px;	
 }
@@ -522,12 +508,16 @@
 	border-bottom: 2px solid #428bca !important;
 	color: #999;	
 }
+
+.pagination .disabled a{
+	background-color:#fafafa !important; 
+}
 .pagination li a:hover, 
 .pagination li span:hover, 
 .pagination li a:focus, 
 .pagination li span:focus { 
-	border-bottom: 2px solid #428bca ;	
-	color: #999;	 
+	border-bottom: 2px solid #eee !important; 
+	color: #999 !important;	 
 }
 .a_loading{
 	background: #fff;
