--- a/source/stylesheets/sidebar.css
+++ b/source/stylesheets/sidebar.css
@@ -5,7 +5,40 @@
 	padding: 5px 0px;
 	font-size: 18px;
 }
+.tagname i{
+	margin-right: 5px;
+}
 .tagcount{
+	font-size: 15px;
+	padding: 5px 0px;
+	color: #707070;
+}
+.locatewrap{
+	margin-top: 20px;
+}
+.locatename{
+	padding: 5px 0px;
+	font-size: 18px;
+}
+.locatename i{
+	margin-right: 5px;
+}
+.locatecount{
+	font-size: 15px;
+	padding: 5px 0px;
+	color: #707070;
+}
+.sitewrap{
+	margin-top: 20px;
+}
+.sitename{
+	padding: 5px 0px;
+	font-size: 18px;
+}
+.sitename i{
+	margin-right: 5px;
+}
+.sitecount{
 	font-size: 15px;
 	padding: 5px 0px;
 	color: #707070;
