--- a/source/stylesheets/user.css
+++ b/source/stylesheets/user.css
@@ -44,10 +44,10 @@ a.unfollowfri:hover{
 	color: #808080 !important;	
 }
 .navigator{	
-    width: 100%; 
-    margin-top: 10px;
-    padding: 10px 20px;
+    width: 100%;  
     display: block;
+    background-color: #fff;
+    padding: 5px;
 }
 .next_page{
 	float: right;
@@ -114,6 +114,7 @@ a.unfollowfri:hover{
 	font-size: 15px;
 	margin-top: 15px;
 	height: 40px;
+	background-color: #f5f5f5;
 	border-bottom: 2px solid #DCDDD9;
 }
 .page_header_info .tab-cell{
